# routes/index.js
@@ -2,5 +2,6 @@ const express = require("express");
 const router = express.Router();
 
 router.use("/princess", require("./princess"));
+router.use("/castle", require("./castle"));
 
 module.exports = router;
